change of status response and json return of validate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
     "cSpell.words": [
+        "Bloqueado",
+        "Disp",
+        "Expirado",
         "INVALIDA",
+        "Penultima",
         "Repos",
         "SYSDATE",
         "SYSTIMESTAMP",
+        "Tentativa",
         "nestjs",
         "ruim",
         "typeorm"
